[package]
name = 'primitives'
version = '0.9.5'
authors = ["Litentry Dev"]
edition = '2021'

[dependencies]
# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
]