[package]
authors = ["Litentry Dev"]
edition = '2021'
name = 'primitives'
version = '0.9.9'

[dependencies]
# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

[features]
default = ["std"]
std = [
  "sp-core/std",
  "sp-runtime/std",
]
